--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.simplerosary.app">
+    package="com.openrosary.app">
 
     <!-- Add vibration permission -->
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -21,13 +21,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity 
+          <activity 
             android:name=".ChoicesActivity"
             android:exported="false" />
             
         <activity 
             android:name=".MainActivity"
+            android:exported="false" />
+            
+        <activity 
+            android:name=".InfoActivity"
             android:exported="false" />
             
     </application>
