--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,20 @@ plugins {
 
 android {
     namespace 'com.openrosary.app'
-    compileSdk 33
-
+    compileSdk 34    
     defaultConfig {
         applicationId "com.openrosary.app"
         minSdk 26  // Updated from 21 to 26 to support adaptive icons
-        targetSdk 33
-        versionCode 1
-        versionName "0.2"
+        targetSdk 34
+        versionCode 3
+        versionName "0.2.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    lint {
+        abortOnError false
+        checkReleaseBuilds true
+        ignoreWarnings false
     }
 
     buildTypes {
