--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.openrosary.app">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Add vibration permission -->
     <uses-permission android:name="android.permission.VIBRATE" />
+    
+    <!-- Add internet permission for update checking -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
